# MEGA-PROJECT-1-JARVIS

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_AUDIT.md  CODE_QUALITY_REPORT.md  Dockerfile  EXECUTIVE_SUMMARY.md  FEATURE_ROADMAP.md  FINAL_SCORECARD.md  LICENSE  PRODUCTION_CHECKLIST.md  README.md  RESUME_VALUE_ANALYSIS.md  ROADMAP.md  SECURITY_AUDIT.md  docker-compose.yml  gpt_enhanced.py  main.py  mine.py  musicLibrary.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: GROK_INTEGRATION_PLAN.md
jarvis/: __init__.py  cli.py
jarvis/adapters/: __init__.py  browser.py  music.py  news.py
jarvis/core/: __init__.py  models.py  ports.py  router.py  service.py
music/: config.json
src/jarvis/: __init__.py  cli.py
src/jarvis/api/: dependencies.py  main.py  schemas.py
src/jarvis/api/routers/: chat.py  health.py
src/jarvis/core/: config.py  models.py  plugin.py  router.py
src/jarvis/llm/: base.py  grok.py  mock.py
src/jarvis/memory/: base.py  inmemory.py
src/jarvis/plugins/: browser_plugin.py  music_plugin.py  news_plugin.py
src/jarvis/providers/: music_provider.py
src/jarvis/services/: assistant.py
src/jarvis/web/: index.html
src/jarvis/web/css/: animations.css  components.css  layout.css  variables.css
src/jarvis/web/js/: api.js  app.js  chat.js  markdown.js  state.js  ui.js
tests/: test_api.py  test_assistant.py  test_edge_cases.py  test_memory.py  test_plugins.py  test_router.py  test_service.py
