[build-system]
requires = ["hatchling>=1.26,<2"]
build-backend = "hatchling.build"

[project]
name = "jarvis"
version = "0.2.0"
description = "A production-grade AI assistant platform."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pygame>=2.6,<3",
    "pyttsx3>=2.97,<3",
    "requests>=2.32,<3",
    "SpeechRecognition[audio]>=3.10,<4",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "fastapi>=0.111,<1",
    "uvicorn>=0.30,<1",
    "httpx>=0.27,<1",
    "tenacity>=8.4,<9"
]

[project.scripts]
jarvis = "jarvis.cli:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.10,<2",
    "pytest>=9.0.3",
    "pytest-cov>=5.0,<7",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.4.0,<1",
    "bandit>=1.7,<2",
    "pip-audit>=2.7,<3",
    "pre-commit>=3.7,<4",
    "types-requests>=2.32.0.20240622"
]

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["B008", "E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
mypy_path = "src"
